package com.tacs.tp1c2026.entities.ReglasStrategies;

import com.tacs.tp1c2026.entities.OfertaSubasta;

public interface IReglaStrategy {

    Boolean cumpleRegla(OfertaSubasta ofertaSubasta);
}
